Added PDF's to the Security section.

--- a/docs/Information/Security.mdx
+++ b/docs/Information/Security.mdx
@@ -1,6 +1,10 @@
 ---
 sidebar_position: 2
 ---
+import PdfEmbed from '@site/src/components/PdfEmbed';
+import pdf1 from '@site/src/components/PdfEmbed/pdfs/Preon-Audit-June-2023.pdf';
+import pdf2 from '@site/src/components/PdfEmbed/pdfs/PeckShield-Audit-Report-Preon.pdf';
+import pdf3 from '@site/src/components/PdfEmbed/pdfs/PeckShield-Audit-Report-Preon-AMO.pdf';
 
 # Security
 
@@ -10,13 +14,23 @@ Smart Contract security is a priority for Preon. All precautions are and will be
 
 All collateral types are peer-reviewed & tested to ensure they are safe to use.
 
-## Audits
+# Audits
 
-- [Audit 1 - Dedaub (June 2023)](https://drive.google.com/file/d/15PDD8G1RHLIMeSGDDEAF8Eh1Qjw2CEXo/view)
 
-- [Audit 2 - Peckshield (May 2024)](https://drive.google.com/file/d/1vjAsAaG_pjIrWZaQiJLkSEmupFsFovsU/view)
 
-- [Audit 3 (AMO) - Peckshield (November 2024)](https://drive.google.com/file/d/19-0VliDJjuQ5l1EE7yn7F961eClXZojT/view)
+
+ ## Audit 1 - Dedaub (June 2023)
+
+ <PdfEmbed src={pdf1} />
+
+ ## Audit 2 - Peckshield (May 2024)
+
+ <PdfEmbed src={pdf2} />
+
+ ## Audit 3 (AMO) - Peckshield (November 2024)
+
+ <PdfEmbed src={pdf3} />
+
 
 ## Codebase
 
