Removed dollar signs from STAR and other tokens.

--- a/docs/Information/Security.mdx
+++ b/docs/Information/Security.mdx
@@ -34,7 +34,7 @@ All collateral types are peer-reviewed & tested to ensure they are safe to use.
 
 ## Codebase
 
-**$wETH, $wMATIC, $stMATIC & $wstETH Nebula Vault**
+**wETH, wMATIC, stMATIC & wstETH Nebula Vault**
 
 Nebula Vaults use [Dyson](https://docs.dyson.money/contracts-and-security/contracts) for their yield farming. Includes auditing and battle-tested code.
 
