--- a/docs/Understanding Preon/Nebula Vaults & Collateral.mdx
+++ b/docs/Understanding Preon/Nebula Vaults & Collateral.mdx
@@ -10,7 +10,7 @@ import ReactPlayer from 'react-player'
 
 ## What are Nebula Vaults?
 
-A Nebula Vault is where you deposit collateral with which you can borrow $STAR.
+A Nebula Vault is where you deposit collateral with which you can borrow STAR.
 
 While collateral is deposited into a Nebula Vault, it is yield-farmed using low-risk strategies that activate the otherwise static asset.
 
