--- a/docs/Understanding Preon/Preon's Liquidation Mechanism.mdx
+++ b/docs/Understanding Preon/Preon's Liquidation Mechanism.mdx
@@ -16,13 +16,13 @@ When a Nebula Vault is entirely closed after exceeding the protocol's maximum LT
 
 ### What are redemptions?
 
-Holders of $STAR have the option to redeem their $STAR at any moment for $0.995 USD worth of underlying collateral, according to the redemption mechanism. Every time a redemption is honored, 1 $STAR is equal to $0.995 USD in collateral, factoring in the current redemption fee.
+Holders of STAR have the option to redeem their STAR at any moment for $0.995 USD worth of underlying collateral, according to the redemption mechanism. Every time a redemption is honored, 1 STAR is equal to $0.995 USD in collateral, factoring in the current redemption fee.
 
 This means that there is currently a 0.5% fee in place for redemptions that is paid out to the borrower you are redeeming against. It will not initially be possible to redeem collateral against other users through our dApp, although this is a feature being worked towards in the future.
 
 ### Is a redemption the same as paying back my debt?
 
-No, redemptions do not constitute top-ups or minimizing LTV. To repay your debt, all one has to do is minimize their $STAR debt from the dApp.
+No, redemptions do not constitute top-ups or minimizing LTV. To repay your debt, all one has to do is minimize their STAR debt from the dApp.
 
 ### As a borrower, do I lose money if I'm redeemed against?
 
@@ -34,13 +34,13 @@ The best way to avoid being redeemed against is by maintaining a conservative LT
 
 ### What are liquidations?
 
-To ensure that $STAR is always fully backed by collateral, vaults that go below the minimum collateral ratio will be closed/liquidated.
+To ensure that STAR is always fully backed by collateral, vaults that go below the minimum collateral ratio will be closed/liquidated.
 
 The debt of the vault is canceled and absorbed by the Stability Pool, and its collateral distributed among Stability Pool providers.
 
-The owner of the vault still keeps the full amount of $STAR borrowed and will not need to repay their debt.
+The owner of the vault still keeps the full amount of STAR borrowed and will not need to repay their debt.
 
-\*In the event of a liquidation where the Stability Pool contains insufficient $STAR, the collateral is distributed among the other existing Nebula Vaults to maintain $STAR stability through over-collateralization.
+\*In the event of a liquidation where the Stability Pool contains insufficient STAR, the collateral is distributed among the other existing Nebula Vaults to maintain STAR stability through over-collateralization.
 
 ### Who can liquidate Nebula Vaults?
 
@@ -56,8 +56,8 @@ Recovery Mode is a system which activates when the total LTV of one specific col
 
 **During Recovery Mode, vaults above 72% LTV can be liquidated**.
 
-If a vault is in Recovery Mode, no $STAR can be minted until the vault’s LTV goes below the maximum. This can be achieved by repaying $STAR debts or adding more collateral to your vault.
+If a vault is in Recovery Mode, no STAR can be minted until the vault’s LTV goes below the maximum. This can be achieved by repaying STAR debts or adding more collateral to your vault.
 
-The goal of Recovery Mode is to incentivize borrowers to behave in ways that promptly reduce the LTV back below the Maximum LTV and to incentivize $STAR holders to replenish the Stability Pool.
+The goal of Recovery Mode is to incentivize borrowers to behave in ways that promptly reduce the LTV back below the Maximum LTV and to incentivize STAR holders to replenish the Stability Pool.
 
 Economically, Recovery Mode is designed to encourage collateral top-ups and debt repayments, and also itself acts as a self-negating deterrent: the possibility of it occurring actually guides the system away from ever reaching it.
