--- a/docs/Detailed Overview/Detailed Overview.mdx
+++ b/docs/Detailed Overview/Detailed Overview.mdx
@@ -10,33 +10,33 @@ import ReactPlayer from 'react-player'
 
 ## Preon as a CDP
 
-Preon is a lending protocol utilizing CDP mechanics to achieve 0% interest borrowing. This is achieved by minting $STAR each time a deposit is collateralized within Preon.
+Preon is a lending protocol utilizing CDP mechanics to achieve 0% interest borrowing. This is achieved by STAR each time a deposit is collateralized within Preon.
 
-Users deposit collateral into our Nebula Vaults & are able to mint $STAR against their collateral. In the meantime, their deposit is farmed using low-risk strategies.
+Users deposit collateral into our Nebula Vaults & are able to mint STAR against their collateral. In the meantime, their deposit is farmed using low-risk strategies.
 
 Collateralizing your assets using Preon has the following benefits:
 Earning on your assets as you leverage against them
-Allows for yield farming opportunities using $STAR
+Allows for yield farming opportunities using STAR
 
-$STAR is wholly over-collateralized. There should always be more collateral backing $STAR than there is $STAR minted.
+STAR is wholly over-collateralized. There should always be more collateral backing STAR than there is STAR minted.
 
 With the release of Preon V2, Preon as a protocol will be democratized, allowing governance holders to control policy within the protocol.
 
-Minting has no interest. Only one-time fees are paid by users, which are variable on opening/adjusting a position (depositing, minting) for loans lasting between 7 days & 6 months, but pending loans will not be affected. Preon has a redemption fee of 0.5%. The fees are distributed between the protocol & $vePREON holders.
+Minting has no interest. Only one-time fees are paid by users, which are variable on opening/adjusting a position (depositing, minting) for loans lasting between 7 days & 6 months, but pending loans will not be affected. Preon has a redemption fee of 0.5%. The fees are distributed between the protocol & vePREON holders.
 
-With our LayerZero integration, $STAR can be minted on over 20 networks after contracts are deployed, with collateral on multiple chains.
+With our LayerZero integration, STAR can be minted on over 20 networks after contracts are deployed, with collateral on multiple chains.
 
 ## Preon as a yield hub
 
-To promote $STAR utility, Preon is using unique incentivization mechanics which includes FOO (Fungible Ownership Optimization).
+To promote STAR utility, Preon is using unique incentivization mechanics which includes FOO (Fungible Ownership Optimization).
 
-$STAR users can deposit their $STAR to the Stability Pool to earn $oPREON, an option call reward that can be redeemed for a discounted value using $STAR or zapped into $vePREON, Preon’s governance token at a 1:1 ratio.
+STAR users can deposit their STAR to the Stability Pool to earn oPREON, an option call reward that can be redeemed for a discounted value using STAR or zapped into vePREON, Preon’s governance token at a 1:1 ratio.
 
 ### Preon Tokens
 
-$vePREON is a receipt NFT for locking $PREON into the protocol’s veNFT contract for a time period between 1 week to 2 years.
+vePREON is a receipt NFT for locking PREON into the protocol’s veNFT contract for a time period between 1 week to 2 years.
 
-$vePREON holders are rewarded with the following:
+vePREON holders are rewarded with the following:
 
 - One-time borrow fee (added to borrowers debt)
 - Repayment fee
@@ -44,12 +44,12 @@ $vePREON holders are rewarded with the following:
 - Liquidation profits
 - Different revenue sources provided by the protocol
 
-$oPREON is the emission token of Preon's Stability Pool. It is illiquid on its own, but can be zapped for $vePREON or redeemed using $STAR at a discount.
-The earned $STAR is used for the protocol in the form of incentives for $vePREON holders and is sent to the Treasury, where it is employed for various purposes.
+oPREON is the emission token of Preon's Stability Pool. It is illiquid on its own, but can be zapped for vePREON or redeemed using STAR at a discount.
+The earned STAR is used for the protocol in the form of incentives for vePREON holders and is sent to the Treasury, where it is employed for various purposes.
 
 ## Preon as a DAO
 
-Preon is built with robustness in mind. As a team, we aim to maximize decentralization. $vePREON holders will have the right to:
+Preon is built with robustness in mind. As a team, we aim to maximize decentralization. vePREON holders will have the right to:
 
 Introduce collateral options within the CDP
 Vote on PIPs (Preon Improvement Proposals)
