added back minting.

--- a/docs/Detailed Overview/Detailed Overview.mdx
+++ b/docs/Detailed Overview/Detailed Overview.mdx
@@ -10,7 +10,7 @@ import ReactPlayer from 'react-player'
 
 ## Preon as a CDP
 
-Preon is a lending protocol utilizing CDP mechanics to achieve 0% interest borrowing. This is achieved by STAR each time a deposit is collateralized within Preon.
+Preon is a lending protocol utilizing CDP mechanics to achieve 0% interest borrowing. This is achieved by minting STAR each time a deposit is collateralized within Preon.
 
 Users deposit collateral into our Nebula Vaults & are able to mint STAR against their collateral. In the meantime, their deposit is farmed using low-risk strategies.
 
