Added youtube video to AMO page.

--- a/docs/Understanding Preon/AMO/How it works.mdx
+++ b/docs/Understanding Preon/AMO/How it works.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_position: 2
 ---
+import ReactPlayer from 'react-player'
 
 # How the Preon AMO Works
 
@@ -61,3 +62,10 @@ What if a user decided to swap all the remaining USDC in the CLP with STAR? In t
 1. User swaps $100k STAR for $100k of USDC
 2. The AMO burns ($100k of “initial STAR” and $600k of “additional STAR”)
 3. All the remaining circulating STAR remains overcollateralized 
+
+
+Here is a video explaining the examples above: 
+
+<ReactPlayer url='https://www.youtube.com/watch?v=iGzscb_F05s' controls />
+
+
